--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+/* --- Navigation Bar Styling --- */
+.nav {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 1rem 0;
+  gap: 1rem;
+}
+.nav a {
+  background-color: white;
+  color: black;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  border-radius: 0.5rem;
+  border: 1px solid black;
+}
+.nav a:hover {
+  background-color: lightgreen;
+  color: black;
+}
+.nav a.active {
+  background-color: firebrick;
+  color: white;
+}
 body{background-color: orange;}
 h2{text-align: center;
 	color: red;}
