--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@
   text-decoration: none;
   border-radius: 0.5rem;
   border: 1px solid black;
+  font-weight: bold;
 }
 .nav a:hover {
-  background-color: lightgreen;
+  background-color: limegreen;
   color: black;
 }
 .nav a.active {
@@ -25,7 +26,7 @@
 }
 body{background-color: orange;}
 h2{text-align: center;
-	color: red;}
+	color: darkgreen;}
 p {text-align: center;
 	color: blue;}
 a:hover {color: firebrick;
