--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{background-color: orange;}
 h2{text-align: center;
 	color: darkgreen;}
 p {text-align: center;
-	color: blue;}
+	color: darkgreen;}
 a:hover {color: firebrick;
 	font-weight: bold;
 	text-decoration: underline;
