--- a/style.css
+++ b/style.css
@@ -62,7 +62,16 @@ body {font-family: Arial, sans-serif;}
   border-radius: 0.625rem;
   animation: fadeIn 1.5s ease-in;
 }
-@media (max-width: 48em) {
+/* 3 -> 2 columns on tablets */
+@media (max-width: 64em) {
+  .image-row {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .image-row img {
+    width: 48%;}}
+    /* 2 -> 1 column on pnones */
+@media (max-width: 40em) {
   .image-row {
     flex-direction: column;
     align-items: center;
