--- a/style.css
+++ b/style.css
@@ -35,9 +35,10 @@ a:hover {color: firebrick;
 	text-decoration: underline;
 	text-shadow: 0 0 0.3rem lightgreen;}
 body {font-family: "Poppins", Arial, sans-serif;}
-@keyframes fadeIn{
-	from {opacity: 0;}
-	to{opacity: 1;}}
+@keyframes fadeIn {
+	from  {opacity: 0; }
+	to { opacity: 1;}
+}
 #one, #two {
 	border: 0.125rem solid black;
 	margin: 0.625rem;
@@ -52,7 +53,7 @@ body {font-family: "Poppins", Arial, sans-serif;}
   align-items: center;
   gap: 1.25rem;
   margin: 1.25rem auto;
-  width: 95vw
+  width: 95vw;
   max-width: 87.5rem;
 }
 .image-row img {
@@ -95,7 +96,7 @@ body {font-family: "Poppins", Arial, sans-serif;}
 .grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  gap: 2rem
+  gap: 2rem;
   padding: 2rem 0;
 }
 .grid figure {
